--- a/WebContent/css/reset.css
+++ b/WebContent/css/reset.css
@@ -112,3 +112,9 @@ table {
 a, a:visited, a:hover {
   text-decoration: none;
 }
+@font-face {
+    font-family: 'IBMPlexSansKR-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
