--- a/WebContent/css/post/style.css
+++ b/WebContent/css/post/style.css
@@ -83,3 +83,100 @@ textarea {
   margin-left: 3rem;
   margin-right: 3rem;
 }
+
+/* ¼³Á¤ */
+h3 {
+  font-size: 1.3125rem;
+  color: rgb(52, 58, 64);
+  line-height: 1.5;
+  margin-bottom: 0.5rem;
+  margin-top: 0px;
+  font-weight: 700;
+}
+.publish_section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.publish {
+  width: 300px;
+}
+.thumbnail_area {
+  margin-bottom: 1rem;
+}
+.thumbnail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: bisque;
+  padding-top: 1.25rem;
+}
+.thumbnail button {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  padding: 0.8rem 1.25rem;
+  height: 2rem;
+  font-size: 1rem;
+  margin: 1rem;
+}
+.show,
+.fin_area {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
+.fin_area {
+  width: 100%;
+  padding-top: 3rem;
+}
+.cancel,
+.publish_btn {
+  height: 2rem;
+  margin: 0.7rem;
+}
+.cancel {
+  margin-right: 0.3rem;
+}
+.publish_btn {
+  margin-left: 0.3rem;
+}
+.display,
+.hide {
+  height: 2.3rem;
+  margin: 0.3rem;
+}
+.display,
+.hide,
+.cancel,
+.publish_btn {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  padding: 0.8rem 1.25rem;
+  font-size: 1rem;
+  flex: 1;
+}
+
+.selected {
+  background-color: gray;
+  color: white;
+}
