--- a/WebContent/css/mypage/style.css
+++ b/WebContent/css/mypage/style.css
@@ -18,6 +18,7 @@ main {
   padding-right: 1.5rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 /* 프로필 이미지 */
 .img_area img {
@@ -40,7 +41,7 @@ main {
   cursor: pointer;
   outline: none;
   border: none;
-  background: rgb(18, 184, 134);
+  background: #333;
   color: white;
   border-radius: 4px;
   padding: 0px 1.25rem;
@@ -59,7 +60,6 @@ main {
   outline: none;
   border: none;
   background: none;
-  color: rgb(18, 184, 134);
   border-radius: 4px;
   padding: 0px 1.25rem;
   height: 2rem;
@@ -91,6 +91,10 @@ main {
   line-height: 1.5;
   color: rgb(134, 142, 150);
 }
+#profile_form .row {
+  padding-bottom: 1rem;
+}
+
 .save_btn {
   display: inline-flex;
   -webkit-box-align: center;
@@ -101,7 +105,7 @@ main {
   cursor: pointer;
   outline: none;
   border: none;
-  background: rgb(18, 184, 134);
+  background: #333;
   color: white;
   border-radius: 4px;
   padding: 0px 1.25rem;
@@ -112,8 +116,9 @@ main {
 .mgn_content {
   display: flex;
   margin-top: 4rem;
+  height: 600px;
 }
-h3 {
+.mgn_content h3 {
   display: block;
   font-size: 1.17em;
   margin-block-start: 1em;
@@ -149,11 +154,26 @@ h3 {
   padding-bottom: 1rem;
 }
 /* 멤버 데이터 + 수정버튼 영역 */
-.block {
+.block, .block form {
   flex: 1 1 0%;
   display: flex;
   -webkit-box-align: center;
   align-items: center;
+  justify-content: space-between;
+}
+
+form .mb-3 {
+  margin-bottom: 0!important;
+}
+.social_label {
+  width: 2rem;
+}
+.social {
+  display: flex;
+  align-items: center;
+}
+.input {
+  width: 20rem;
 }
 /* 멤버 개인 데이터 */
 .contents {
@@ -181,7 +201,7 @@ h3 {
   display: inline;
   font-size: 1rem;
   line-height: 1.5;
-  color: rgb(18, 184, 134);
+  color: #333;
   text-decoration: underline;
   background: none;
   cursor: pointer;
@@ -240,4 +260,22 @@ input:checked + .toggle:after {
 }
 .toggle span {
   display: none;
+}
+
+/* 비밀번호 체크 버튼 */
+.chk_pass_btn {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  padding: 0.8rem 1.25rem;
+  height: 2.3rem;
+  font-size: 1rem;
+  margin-left: 1rem;
 }
