--- a/WebContent/css/member/style.css
+++ b/WebContent/css/member/style.css
@@ -1,10 +1,70 @@
-*{box-sizing:border-box}
-html{font-size:62.5%}
-@media (min-width:901px){.section_main{max-width:90%}}
-@media (min-width:1201px){.section_main{max-width:70%}}
-body{display:flex;flex-direction:column}
-.header_nav{height:50px;display:flex;align-items:center;padding:2.5rem;font-size:2.5rem}
-.nav_bar{position:absolute;left:-30rem;top:0;width:30rem;height:100%;background-color:#000;font-size:1.5rem;padding:1.5rem;color:#fff}
-.nav_bar li:first-child{font-size:2.5rem;display:flex;justify-content:space-between;margin-bottom:5rem}
-.nav_bar li:not(li:first-child){margin:2rem 0}
-.btn{cursor:pointer}
+* {
+	box-sizing: border-box
+}
+
+html {
+	font-size: 62.5%
+}
+
+@media ( min-width :901px) {
+	.section_main {
+		max-width: 90%
+	}
+}
+
+@media ( min-width :1201px) {
+	.section_main {
+		max-width: 70%
+	}
+}
+
+.section_main {
+	margin: 0 auto;
+	width: 70rem;
+	margin-top: 18rem
+}
+
+#containerTitle {
+	font-size: 3rem;
+	font-weight: bold;
+}
+
+#containerContent {
+	margin-top: 6rem
+}
+
+.form-check-label {
+	font-size: 1.4rem;
+	margin-left: 1rem
+}
+
+.mb-3 {
+	margin-top: 2rem;
+}
+
+#exampleFormControlTextarea1 {
+	height: 20rem;
+	font-size: 1.4rem;
+	background-color: #FFFFFF;
+	resize: none;
+}
+
+#buttons {
+	margin: 0 auto;
+	margin-top: 6rem;
+	width: 30rem
+}
+
+.btn-secondary {
+	margin-left: 2rem;
+}
+
+.btn-light, .btn-secondary {
+	width: 12rem;
+	height: 4rem;
+	font-size: 1.3rem !important;
+}
+
+#container {
+	margin-bottom: 20rem
+}
