--- a/WebContent/css/blog/blog_post.css
+++ b/WebContent/css/blog/blog_post.css
@@ -1,3 +1,8 @@
+body {
+    display: flex;
+    flex-direction: column
+}
+
 .section_main .post .comments_list .comment .c_writer_info div:last-child span:hover,
 .section_main .post .post_info .btns span:hover,
 .section_main .post .write_comment .btn_comment:hover,
@@ -6,70 +11,15 @@
     cursor: pointer
 }
 
-.section_main .post .writer_info svg:hover {
+.like_heart, .like_heart path {
+	color: #f55a7d;
+}
+
+.postLike:hover, .postShare:hover {
     cursor: pointer
 }
 
-* {
-    box-sizing: border-box
-}
-
-html {
-    font-size: 62.5%
-}
-
-@media (min-width:901px) {
-    .section_main {
-        max-width: 80%;
-        min-width: 700px;
-    }
-}
-
-@media (min-width:1201px) {
-    .section_main {
-        max-width: 65%;
-        min-width: 800px;
-    }
-}
-
-body {
-    display: flex;
-    flex-direction: column
-}
-
-.header_nav {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    padding: 2.5rem;
-    font-size: 2.5rem
-}
-
-.nav_bar {
-    position: absolute;
-    left: -30rem;
-    top: 0;
-    width: 30rem;
-    height: 100vh;
-    background-color: #000;
-    font-size: 1.5rem;
-    padding: 1.5rem;
-    color: #fff;
-    z-index: 999
-}
-
-.nav_bar li:first-child {
-    font-size: 2.5rem;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 5rem
-}
-
-.nav_bar li:not(li:first-child) {
-    margin: 2rem 0
-}
-
-.btn {
+.section_main .post .writer_info svg:hover {
     cursor: pointer
 }
 
@@ -112,7 +62,8 @@ body {
 
 .section_main .post .post_info {
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    font-size: 1.3rem
 }
 
 .section_main .post .post_info div:first-child {
@@ -193,7 +144,12 @@ body {
 }
 
 .section_main .post textarea {
-    resize: none
+    resize: none;
+    border: 1px solid #d7d7d7;
+}
+
+textarea:focus {
+	outline: 1px solid #bebebe;
 }
 
 .section_main .post .write_comment {
@@ -265,7 +221,7 @@ body {
 }
 
 .section_main .post .comments_list .comment .c_content {
-    padding-left: 7rem;
+    padding: 0 2rem 0 7rem;
     margin-top: 1rem;
     line-height: 1.4rem
 }
