--- a/WebContent/css/common/common_header_footer.css
+++ b/WebContent/css/common/common_header_footer.css
@@ -1,6 +1,31 @@
 @charset "EUC-KR";
 
 
+/* in common */
+* {
+    box-sizing: border-box
+}
+
+html {
+    font-size: 62.5%
+}
+
+@media (min-width:901px) {
+    .section_main {
+        max-width: 90%;
+        min-width: 600px
+    }
+}
+
+@media (min-width:1201px) {
+    .section_main {
+        max-width: 70%;
+        min-width: 800px
+    }
+}
+
+
+/* header */
 .header_nav {
     height: 50px;
     display: flex;
@@ -68,4 +93,21 @@
 
 .nav_bar button:hover {
     cursor: pointer
+}
+
+.navBtn:hover {
+	cursor: pointer;
+}
+
+
+
+
+/* footer */
+.section_footer {
+    background-color: #000;
+    width: 100%;
+    color: #fff;
+    line-height: 2rem;
+    padding: 3rem 4rem;
+    margin-top: 10rem
 }
