수정 : 마지막 페이지에서 메인의 더보기 버튼 삭제, 포스트에서 좋아요 부분 수정

--- a/WebContent/css/blog/blog_post.css
+++ b/WebContent/css/blog/blog_post.css
@@ -143,6 +143,10 @@ body {
     margin-right: 1rem
 }
 
+.writer_info a, .comment a {
+	color: black;
+}
+
 .section_main .post textarea {
     resize: none;
     border: 1px solid #d7d7d7;
