--- a/WebContent/css/main/user_main.css
+++ b/WebContent/css/main/user_main.css
@@ -55,3 +55,11 @@ body {
     cursor: pointer
 }
 
+.post a, .post a:visited, .post a:hover {
+	color: black;
+}
+
+.no_post {
+	text-align: center;
+	padding: 5rem 0;
+}
