수정 : 블로그 포스트 댓글 작성 시 효과 추가

--- a/WebContent/css/blog/blog_post.css
+++ b/WebContent/css/blog/blog_post.css
@@ -229,3 +229,15 @@ textarea:focus {
     margin-top: 1rem;
     line-height: 1.4rem
 }
+
+/* 댓글 작성시 animation 효과 */
+.comment-init {
+  opacity: 0;
+  padding-top: 1em;
+}
+
+.comment-fade {
+  opacity: 1;
+  padding-top: 0;
+  transition: all 0.5s;
+}
