--- a/WebContent/css/post/style.css
+++ b/WebContent/css/post/style.css
@@ -1,196 +1,224 @@
+/* 사용자 글 작성하는 post_form */
 .editor_content {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
+
 .btn_wrapper {
-  display: flex;
-  justify-content: space-between;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+	display: flex;
+	justify-content: space-between;
+	padding-left: 2.5rem;
+	padding-right: 2.5rem;
 }
+
 .post_btn {
-  display: inline-flex;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  font-weight: bold;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  border-radius: 4px;
-  padding: 0.8rem 1.25rem;
-  height: 2rem;
-  font-size: 1rem;
-  margin: 1rem;
+	display: inline-flex;
+	-webkit-box-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	font-weight: bold;
+	cursor: pointer;
+	outline: none;
+	border: none;
+	border-radius: 4px;
+	padding: 0.8rem 1.25rem;
+	height: 2rem;
+	font-size: 1rem;
+	margin: 1rem;
 }
+
 .save_area {
-  display: flex;
-  flex-direction: row-reverse;
+	display: flex;
+	flex-direction: row-reverse;
 }
-input,
-button,
-textarea {
-  font-family: inherit;
+
+input, button, textarea {
+	font-family: inherit;
 }
+
 .title_area {
-  padding-top: 2rem;
-  padding-left: 3rem;
-  padding-right: 3rem;
+	padding-top: 2rem;
+	padding-left: 3rem;
+	padding-right: 3rem;
 }
+
 .post_title {
-  padding-top: 30px;
-  display: block;
-  padding: 0px;
-  font-size: 2.75rem;
-  width: 100%;
-  resize: none;
-  line-height: 1.5;
-  outline: none;
-  border: none;
-  font-weight: bold;
-  color: rgb(33, 37, 41);
+	padding-top: 30px;
+	display: block;
+	padding: 0px;
+	font-size: 2.75rem;
+	width: 100%;
+	resize: none;
+	line-height: 1.5;
+	outline: none;
+	border: none;
+	font-weight: bold;
+	color: rgb(33, 37, 41);
 }
+
 .tag_area {
-    display: inline-flex;
-    outline: none;
-    cursor: text;
-    font-size: 1.125rem;
-    line-height: 2rem;
-    padding-bottom: 0.75rem;
-    min-width: 8rem;
-    border: none;
-    display: flex;
-    align-items: center;
+	display: inline-flex;
+	outline: none;
+	cursor: text;
+	font-size: 1.125rem;
+	line-height: 2rem;
+	padding-bottom: 0.75rem;
+	min-width: 8rem;
+	border: none;
+	display: flex;
+	align-items: center;
 }
+
 .post_tag {
 	display: inline-flex;
-    outline: none;
-    cursor: text;
-    font-size: 1.125rem;
-    line-height: 2rem;
-    padding-top: 0.35rem;
-    padding-bottom: 0.35rem;
-    min-width: 8rem;
-    border: none;
-    margin-left: 0.7rem;
+	outline: none;
+	cursor: text;
+	font-size: 1.125rem;
+	line-height: 2rem;
+	padding-top: 0.35rem;
+	padding-bottom: 0.35rem;
+	min-width: 8rem;
+	border: none;
+	margin-left: 0.7rem;
 }
-.tag{
+
+.tag {
 	margin-left: 0.3rem;
-    margin-right: 0.3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    background-color: gray;
-    height: fit-content;
-    color: white;
-    border-radius: 10rem;
+	margin-right: 0.3rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	background-color: gray;
+	height: fit-content;
+	color: white;
+	border-radius: 10rem;
 }
+
 .title_line {
-  background: rgb(73, 80, 87);
-  height: 6px;
-  width: 4rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1rem;
-  border-radius: 1px;
+	background: rgb(73, 80, 87);
+	height: 6px;
+	width: 4rem;
+	margin-top: 1.5rem;
+	margin-bottom: 1rem;
+	border-radius: 1px;
 }
+
 .editor {
-  margin-left: 3rem;
-  margin-right: 3rem;
+	margin-left: 3rem;
+	margin-right: 3rem;
 }
 
 /* 설정 */
 h3 {
-  font-size: 1.3125rem;
-  color: rgb(52, 58, 64);
-  line-height: 1.5;
-  margin-bottom: 0.5rem;
-  margin-top: 0px;
-  font-weight: 700;
+	font-size: 1.3125rem;
+	color: rgb(52, 58, 64);
+	line-height: 1.5;
+	margin-bottom: 0.5rem;
+	margin-top: 0px;
+	font-weight: 700;
 }
+
 .publish_section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
 }
+
 .publish {
-  width: 300px;
+	width: 300px;
 }
+
 .thumbnail_area {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
+
 .thumbnail {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: bisque;
-/*   padding-top: 1.25rem; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: bisque;
+	/*   padding-top: 1.25rem; */
 }
+
 .thumbnail button {
-  display: inline-flex;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  font-weight: bold;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  border-radius: 4px;
-  padding: 0.8rem 1.25rem;
-  height: 2rem;
-  font-size: 1rem;
-  margin: 1rem;
+	display: inline-flex;
+	-webkit-box-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	font-weight: bold;
+	cursor: pointer;
+	outline: none;
+	border: none;
+	border-radius: 4px;
+	padding: 0.8rem 1.25rem;
+	height: 2rem;
+	font-size: 1rem;
+	margin: 1rem;
 }
-.show,
+
+.show, .fin_area {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-content: center;
+}
+
 .fin_area {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
+	width: 100%;
+	padding-top: 3rem;
 }
-.fin_area {
-  width: 100%;
-  padding-top: 3rem;
+
+.cancel, .publish_btn {
+	height: 2rem;
+	margin: 0.7rem;
 }
-.cancel,
-.publish_btn {
-  height: 2rem;
-  margin: 0.7rem;
-}
+
 .cancel {
-  margin-right: 0.3rem;
+	margin-right: 0.3rem;
 }
+
 .publish_btn {
-  margin-left: 0.3rem;
+	margin-left: 0.3rem;
 }
-.display,
-.hide {
-  height: 2.3rem;
-  margin: 0.3rem;
+
+.display, .hide {
+	height: 2.3rem;
+	margin: 0.3rem;
 }
-.display,
-.hide,
-.cancel,
-.publish_btn {
-  display: inline-flex;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  font-weight: bold;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  border-radius: 4px;
-  padding: 0.8rem 1.25rem;
-  font-size: 1rem;
-  flex: 1;
+
+.display, .hide, .cancel, .publish_btn {
+	display: inline-flex;
+	-webkit-box-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	font-weight: bold;
+	cursor: pointer;
+	outline: none;
+	border: none;
+	border-radius: 4px;
+	padding: 0.8rem 1.25rem;
+	font-size: 1rem;
+	flex: 1;
 }
 
 .selected {
-  background-color: gray;
-  color: white;
+	background-color: gray;
+	color: white;
+}
+
+/* 태그 입력시 animation 효과 */
+.tag-init {
+	opacity: 0;
+	margin-top: .3em;
+}
+
+.tag-fade {
+	opacity: 1;
+	margin-top: 0;
+	transition: all 0.2s;
 }
