--- a/WebContent/css/post/style.css
+++ b/WebContent/css/post/style.css
@@ -117,21 +117,35 @@ h3 {
 	margin-top: 0px;
 	font-weight: 700;
 }
-
+.content {
+	padding: 3rem;
+	display: flex;
+	flex-direction: column;
+}
 .publish_section {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100%;
+	height: 100vh;
 }
 
 .publish {
-	width: 300px;
+    width: 30%;
+    height: 40vh;
 }
 
 .thumbnail_area {
-	margin-bottom: 1rem;
+    display: flex;
+    margin-bottom: 1rem;
+    flex-direction: column;
+    flex: 1.7;
+}
+
+.show_area {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .thumbnail {
@@ -139,8 +153,15 @@ h3 {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: bisque;
-	/*   padding-top: 1.25rem; */
+	/* background-color: bisque; */
+	padding-top: 1.25rem;
+	height: 19rem;
+}
+
+.preview {
+    width: auto; height: auto;
+    max-width: 300px;
+    max-height: 245px;
 }
 
 .thumbnail button {
@@ -160,16 +181,23 @@ h3 {
 	margin: 1rem;
 }
 
-.show, .fin_area {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-content: center;
+.edit_group {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.show {
+    display: flex;
 }
 
 .fin_area {
-	width: 100%;
-	padding-top: 3rem;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    padding: 1rem;
+    text-align: end;
 }
 
 .cancel, .publish_btn {
