수정 : common header의 경로 수정 및 로고 추가, 메인과 블로그 css 수정

--- a/WebContent/css/common/common_header_footer.css
+++ b/WebContent/css/common/common_header_footer.css
@@ -59,6 +59,11 @@ html {
     margin: 2rem 0
 }
 
+.nav_bar img {
+	width: 4rem;
+	height: 4rem;
+}
+
 .nav_bar a {
     padding: .5rem 0;
     color: #fff
