--- a/WebContent/css/main/user_main.css
+++ b/WebContent/css/main/user_main.css
@@ -33,11 +33,11 @@ body {
 
 .section_main .post .post_img {
     width: 100%;
-    height: 15rem;
+    height: 12rem;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    background-image: url(https://cdn.pixabay.com/photo/2015/07/17/22/43/student-849825__340.jpg)
+    background-image: url(../../images/post-default2.png)
 }
 
 .section_main .post:hover>.post_img {
