수정 : 사용자 메인, 블로그 메인, common header 수정

--- a/WebContent/css/common/common_header_footer.css
+++ b/WebContent/css/common/common_header_footer.css
@@ -3,12 +3,18 @@
 /* »ç¿ëÀÚ common header */
 /* in common */
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
     font-family: IBMPlexSansKR-Regular;
+    font-size: 62.5%;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+	font-size: 1.3rem
 }
 
 @media (min-width:901px) {
