--- a/WebContent/css/blog/myBlog_main.css
+++ b/WebContent/css/blog/myBlog_main.css
@@ -1,17 +1,12 @@
+
 .blog_post .category ul li:hover, .blog_post .post_list .post .post_title:hover
 	{
 	text-decoration: underline;
-	cursor: pointer
+	cursor: pointer;
 }
 
 .btn_set .btn_search:hover {
-	cursor: pointer
-}
-
-body {
-	display: flex;
-	flex-direction: column;
-	font-size: 1.2rem
+	cursor: pointer;
 }
 
 .btn {
@@ -29,8 +24,7 @@ body {
 	grid-template-columns: repeat(4, 1fr);
 	-ms-grid-rows: (1fr)[3];
 	grid-template-rows: repeat(3, 1fr);
-	padding: 0 5rem;
-	font-size: 1.2rem;
+	padding: 0 3rem;
 	margin-top: 5rem
 }
 
@@ -96,13 +90,14 @@ body {
 
 .my_profile .profile_img {
 	grid-area: span 3/span 1;
-	margin: 0 auto
+	margin: 0 3rem;
 }
 
 .my_profile .profile_img img {
 	width: 10rem;
 	height: 10rem;
-	border-radius: 50%
+	border-radius: 50%;
+	object-fit: fill;
 }
 
 .my_profile .profile_comment, .my_profile .profile_follow, .my_profile .profile_nickname
@@ -112,9 +107,8 @@ body {
 }
 
 .my_profile .profile_comment a, .my_profile .profile_comment a:hover,
-	.my_profile .profile_comment a:visited, .my_profile .profile_follow a,
-	.my_profile .profile_follow a:hover, .my_profile .profile_follow a:visited,
-	.my_profile .profile_nickname a, .my_profile .profile_nickname a:hover,
+	.my_profile .profile_comment a:visited, .my_profile a, .my_profile  a:hover,
+	.my_profile a:visited, .my_profile .profile_nickname a, .my_profile .profile_nickname a:hover,
 	.my_profile .profile_nickname a:visited {
 	color: #000
 }
@@ -145,13 +139,19 @@ body {
 	margin-left: .5rem
 }
 
-.my_profile .profile_follow svg {
+.my_profile svg {
 	font-size: 1.5rem;
-	margin-left: 1rem
+	margin-right: 1rem;
+	transition: .2s;
+}
+
+.my_profile svg:hover {
+	color: #5583AC;
+	transition: .2s;
 }
 
 .btn_set {
-	padding: 2rem 5rem 0;
+	padding: 2rem 3rem 0;
 	text-align: right
 }
 
@@ -166,7 +166,8 @@ body {
 }
 
 .btn_set .input_search:focus {
-	outline: 0
+	outline: 0;
+	transition: .2s;
 }
 
 .btn_set .btn_search {
@@ -174,7 +175,13 @@ body {
 	background-color: #000;
 	color: #fff;
 	padding: .5rem 1rem;
-	border-radius: .5rem
+	border-radius: .5rem;
+}
+
+.btn_set .btn_search:hover {
+	background-color: #5583AC;
+	border: 0;
+	transition: .2s;
 }
 
 .blog_post {
@@ -212,7 +219,8 @@ body {
 }
 
 .blog_post .post_list .post:hover>.post_img {
-	opacity: .3
+	opacity: .7;
+	transition: .2s;
 }
 
 .blog_post .post_list .post div {
@@ -221,11 +229,10 @@ body {
 
 .blog_post .post_list .post .post_img {
 	overflow: hidden;
-	height: 12rem
-}
-
-.blog_post .post_list .post .post_img img {
-	width: 100%
+	height: 12rem;
+	transition: .2s;
+	background-position: center;
+	background-size: cover;
 }
 
 .blog_post .post_list .post .post_title {
