추가: mypage / jsp, controller / 구글 애널리틱스 API로 게시글 별 조회수 테이블, 블로그의 방문자 수 그래프 구현

--- a/WebContent/css/mypage/style.css
+++ b/WebContent/css/mypage/style.css
@@ -272,3 +272,10 @@ input:checked + .toggle:after {
   height: 2.3rem;
   margin-left: 1rem;
 }
+
+/* 조회수 테이블 */
+.view-table {
+	display: grid;
+	grid-template-columns: 100px 1fr 1fr;
+	grid-gap: 10px;
+}
