--- a/WebContent/css/blog/myBlog_main.css
+++ b/WebContent/css/blog/myBlog_main.css
@@ -1,4 +1,3 @@
-
 .blog_post .category ul li:hover, .blog_post .post_list .post .post_title:hover
 	{
 	text-decoration: underline;
@@ -104,9 +103,10 @@
 }
 
 .my_profile .profile_comment a, .my_profile .profile_comment a:hover,
-	.my_profile .profile_comment a:visited, .my_profile a, .my_profile  a:hover,
-	.my_profile a:visited, .my_profile .profile_nickname a, .my_profile .profile_nickname a:hover,
-	.my_profile .profile_nickname a:visited {
+	.my_profile .profile_comment a:visited, .my_profile .profile_nickname a,
+	.my_profile .profile_nickname a:hover, .my_profile .profile_nickname a:visited,
+	.f_title
+	{
 	color: #000
 }
 
@@ -138,20 +138,13 @@
 	margin-left: .5rem
 }
 
-.my_profile .btn_follow{
+.my_profile .btn_follow {
 	background-color: black;
 	color: white;
 	padding: .75rem 3rem;
 	border-radius: 2rem;
 	transition: .2s;
 }
-
-.my_profile svg {
-	font-size: 1.5rem;
-	margin-right: 1rem;
-	transition: .2s;
-}
-
 
 .btn_set {
 	padding: 2rem 3rem 0;
@@ -179,13 +172,6 @@
 	color: #fff;
 	padding: .5rem 1rem;
 	border-radius: .5rem;
-}
-
-.btn_set .write_btn {
-	font-size: 1.5rem;
-	margin-top: 1rem;
-	color: black;
-	transition: .2s;
 }
 
 .blog_post {
@@ -256,15 +242,30 @@
 	font-size: 1.3rem
 }
 
+/* SVG */
+.color_hover svg {
+	margin-right: .3rem;
+	font-size: 1.5rem;
+}
 
+.my_profile .svgs {
+	margin-right: 1rem
+}
+
+.color_hover, .color_hover:visited {
+	font-size: 1.4rem;
+	margin-top: 1rem;
+	color: black;
+	transition: .2s;
+}
 
 .color_hover_bg:hover {
 	background-color: #5583AC;
 	color: white;
 	transition: .2s;
 	border: 0;
-	
 }
+
 .color_hover:hover {
 	color: #5583AC;
 	transition: .2s;
