--- a/WebContent/css/blog/blog_post.css
+++ b/WebContent/css/blog/blog_post.css
@@ -23,18 +23,18 @@ body {
 .section_main {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 9fr;
-    grid-template-columns: 1fr 9fr;
+    -ms-grid-columns: 1.5fr 9fr;
+    grid-template-columns: 1.5fr 9fr;
     margin: 0 auto;
     font-size: 1.2rem
 }
 
 .section_main .post_side_tab ul {
+    width: 3.5rem;
     position: fixed;
     background-color: #e8e8e8;
     top: 30vh;
     font-size: 1.5rem;
-    width: 4rem;
     border-radius: 2.5rem;
     padding: 2rem 0
 }
@@ -100,7 +100,7 @@ body {
 
 .section_main .post .post_tags span {
     margin-right: .3rem;
-    background-color: #ffdfdf;
+    background-color: #BADFFF;
     padding: .3rem 1rem;
     border-radius: 2rem
 }
