update 이용약관 및 개인정보취급방침

--- a/WebContent/css/member/style.css
+++ b/WebContent/css/member/style.css
@@ -42,7 +42,7 @@ html {
 	margin-top: 2rem;
 }
 
-#exampleFormControlTextarea1 {
+#serviceAgreeText, #infoAgreeText {
 	height: 20rem;
 	font-size: 1.4rem;
 	background-color: #FFFFFF;
