--- a/WebContent/css/mypage/style.css
+++ b/WebContent/css/mypage/style.css
@@ -123,7 +123,7 @@ main {
 
 h3 {
 	display: block;
-	font-size: 1.6rem;
+	font-size: 1.7rem;
 	margin: 1.3rem 0;
 	font-weight: bold;
 }
@@ -239,11 +239,14 @@ input:checked+.toggle:after {
 }
 /* 비밀번호 체크 버튼 */
 .chk_pass_btn, .chk_pass_btn2{
-	background-color: #333;
- 	cursor: pointer;
-	border: none;
-	border-radius: 4px;
- 	align-items: center;
+    background-color: #333;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    align-items: center;
+    color: white;
+    height: 2.7rem;
+    width: 5.3rem;
 }
 .chk_pass_btn {
  	margin-left: 1rem;
@@ -267,15 +270,22 @@ canvas {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
-.view-table > .column {
+.view-table .column {
 	background-color: #eee;
 	display: inline-grid;
 	place-items: center;
 	margin: 0;
 }
-.view-table > .data {
+.view-table .data {
 	border-bottom: 1px solid #eee;
 	display: inline-grid;
 	place-items: center;
 	margin: 0;
+}
+.view-table .row {
+    grid-column: 1/3;
+    padding-left: 2rem;
+    line-height: 3rem;
+    letter-spacing: 0.5rem;
+    font-size: 1.4rem;
 }
