수정 : 메인의 검색기능 수정, footer 내용 추가, 보관함 favicon추가

--- a/WebContent/css/common/common_header_footer.css
+++ b/WebContent/css/common/common_header_footer.css
@@ -123,3 +123,9 @@ body {
     margin-top: 10rem
 }
 
+.section_footer a,
+.section_footer a:visited,
+.section_footer a:hover {
+	color: white;
+}
+
