수정 : 블로그 포스트에서 이미지의 크기에 따라 width가 다르게 보이는 현상 수정

--- a/WebContent/css/blog/blog_post.css
+++ b/WebContent/css/blog/blog_post.css
@@ -105,6 +105,12 @@ body {
     border-radius: 2rem
 }
 
+.tui-editor-contents img {
+	max-width: 500px;
+}
+
+
+/* 작성자 정보 */
 .section_main .post .writer_info {
     display: -ms-grid;
     display: grid;
