--- a/WebContent/css/common/common_header_footer.css
+++ b/WebContent/css/common/common_header_footer.css
@@ -120,7 +120,8 @@ body {
     color: #fff;
     line-height: 2rem;
     padding: 3rem 4rem;
-    margin-top: 10rem
+    margin-top: 10rem;
+    font-size: 1.3rem;
 }
 
 .section_footer a,
