--- a/WebContent/css/common/common_header_footer.css
+++ b/WebContent/css/common/common_header_footer.css
@@ -12,9 +12,10 @@ html {
 }
 
 body {
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
-	font-size: 1.3rem
+	font-size: 1.3rem;
 }
 
 @media (min-width:901px) {
@@ -54,16 +55,22 @@ body {
     z-index: 999
 }
 
+.nav_bar li {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
 .nav_bar li:first-child {
     font-size: 2.5rem;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5rem
+    margin-bottom: 5rem;
+    margin-top: 0
 }
 
-.nav_bar li:not(li:first-child) {
+/* .nav_bar li:not(li:first-child) {
     margin: 2rem 0
-}
+} */
 
 .nav_bar img {
 	width: 4rem;
@@ -120,7 +127,7 @@ body {
     color: #fff;
     line-height: 2rem;
     padding: 3rem 4rem;
-    margin-top: 10rem;
+    margin-top: auto;
     font-size: 1.3rem;
 }
 
