--- a/WebContent/css/main/user_main.css
+++ b/WebContent/css/main/user_main.css
@@ -6,7 +6,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
     padding: 0 1.5rem;
-    margin: 0 auto
+    margin: 0 auto;
 }
 
 .section_main .main_title {
