수정 : 보관함에서 아이디 연결 a 수정

--- a/WebContent/css/blog/like_post.css
+++ b/WebContent/css/blog/like_post.css
@@ -63,6 +63,11 @@ body {
     justify-content: space-between
 }
 
+.post_info a, .post_info a:visited, .post_info a:hover{
+	color: black;
+}
+
+
 .main_btn {
     justify-content: center;
     margin-top: 5rem
