--- a/WebContent/css/common/common_header_footer.css
+++ b/WebContent/css/common/common_header_footer.css
@@ -74,7 +74,7 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.611);
-    z-index: 900;
+    /* z-index: 9; */
 }
 
 .hidden {
