수정 : 댓글 작성 오류 수정 및 모달창이 가려지는 현상 수정

--- a/WebContent/css/common/common_header_footer.css
+++ b/WebContent/css/common/common_header_footer.css
@@ -66,6 +66,7 @@ body {
     justify-content: space-between;
     margin-bottom: 5rem;
     margin-top: 0
+    
 }
 
 .close_bar {
@@ -74,7 +75,7 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.611);
-    /* z-index: 9; */
+/*     z-index: 9 */;
 }
 
 .hidden {
